@@ -1,4 +1,5 @@
 0.7.1 - currently working on
+- [#3734] Fix: List::getUids and ::hasUid need to react to changes
 - [#3729] Change: Provide ext_autoload for our extensions
 
 0.7.0 - released 2010-02-23
